fixed layout issues

--- a/index.css
+++ b/index.css
@@ -150,10 +150,8 @@ nav li:hover {
 .primary-wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
-  max-width: 400px;
-  min-height: 100vh;
 }
 
 .main-primary-btn {
